# dart_autogui

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pubspec.yaml
doc/: phase3-screenshot-image.md
docs/: phase3-screenshot-image.md
example/: autogui_example.dart  dart_autogui_example.dart  keyboard_example.dart
lib/: autogui.dart  dart_autogui.dart
lib/src/: keyboard.dart  locate.dart  platform.dart
lib/src/ffi/: bindings.dart  linux.dart  macos.dart  windows.dart
src/native/linux/: autogui.c
src/native/macos/: autogui.h  autogui.mm  libdart_autogui.dylib
src/native/windows/: autogui.cpp
test/: autogui_test.dart  dart_autogui_test.dart  keyboard_test.dart  locate_test.dart  mouse_test.dart  public_api_test.dart  screen_test.dart
test/mocks/: mock_platform.dart
tool/: verify_capture.dart
